# markdownviewdd

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-windows.bat  markdownview.pro
docs/: architecture.md
examples/: preview-demo.md
resources/: markdown.css  markdownview.qrc
scripts/: build-windows.ps1
src/: diagnostics.cpp  diagnostics.h  markdown_preview_dock.cpp  markdown_preview_dock.h  ndd_plugin_api.h  plugin_exports.cpp  preview_controller.cpp  preview_controller.h
